about us and home page fix

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -15,7 +15,7 @@
           </h1>
 
           <h4>
-            Welcome to the world of deadbeat, Deadbeat is a transmedia story centered around a radio station in the year 2069, where the undead rule the world.
+            We are Elevate. We’re a company. A transmedia company if you’re telling your friends about us.
           </h4>
 
         </div>
@@ -59,6 +59,12 @@
                   <span>Hugs,</span>
                   <span>Elevate</span>
                 </div>
+              </div>
+
+              <div class="yaas-inner-row">
+                <span>Hi.</span>
+                <span>Hello.</span>
+                <span>Heya.</span>
               </div>
             </div>
           </div>
