--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -1,6 +1,6 @@
 <div class="db-page db-page--explore-oc">
 
-  <section class="db-section db-section--explore-oc-banner-after-life-faction">
+  {% comment %} <section class="db-section db-section--explore-oc-banner-after-life-faction">
 
     <div class="explore-oc--banner">
       <div class="db-container">
@@ -161,8 +161,48 @@
         </div>
       </div>
     </div>
-  </section> 
+  </section>  {% endcomment %}
 
+  <section class="db-section db-section--explore-oc-the-game">
+    <div class="explore-oc">
+      <div class="db-container">
+        <div class="db-row">
+          <h1>
+            <span>Death</span>
+            <span>in the oc</span>
+          </h1>
+
+          <div class="db-col">
+            You should stare at this screen, don’t blin... don’t bl....dammit stop. Ugh, just press play.
+          </div>
+        </div>
+
+        <div class="db-row">
+          <div class="db-col">
+            <div class="db-behind-the-scenes">
+              <div class="db-behind-the-scenes-title">
+                BEHIND THE SCENES
+              </div>
+
+              <div class="db-behind-the-scenes-description">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
+            </div>
+
+            <div class="db-play-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="45" viewBox="0 0 40 45" fill="none" class="db-svg">
+                <path d="M37.2949 20.7764L5.01457 1.77454C3.68131 0.989709 2 1.95098 2 3.49809V41.5019C2 43.049 3.68131 44.0103 5.01458 43.2255L37.2949 24.2236C38.6088 23.4501 38.6088 21.5499 37.2949 20.7764Z" stroke="#B1FF29" stroke-width="3" stroke-linecap="round"/>
+              </svg>
+            </div>
+          </div>
+
+          <div class="db-col">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="db-section db-section--explore-oc-resurrection">
     <div class="db-container">
