--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -1,38 +1,6 @@
 <div class="db-page db-page--home">
 
-  <div class="spotify-backdrop">
-    {% comment %} <div class="spotify-wrapper" @click="togglePlay">
-        <div class="nowPlayingCard">
-          
-          <div class='nowPlayingImage'>
-            <a v-if="playerState === 'PLAY' || playerState === 'PAUSE'" :href="music_player.songUrl">
-              <img :src="albumImageUrl" alt="Album" />
-            </a>
-            <img v-else :src="albumImageUrl" alt="">
-          </div>
-
-          <div class="nowPlayingDetails">
-            <div class="nowPlayingTitle" :class="{'playlistName': title && title.length > 15 ? true : false }">
-              <a v-if="playerState === 'PLAY' || playerState === 'PAUSE'" :href="music_player.songUrl" v-text="title">
-              </a>
-              <div v-else class="text" v-text="title"></div>
-            </div>
-            
-            <div class="nowPlayingArtist">
-              <a v-if="playerState === 'PLAY' || playerState === 'PAUSE'" :href="music_player.artistUrl" v-text="artist">
-              </a>
-              <div v-else class="text" v-text="artist"></div>
-            </div>
-
-            <div class="nowPlayingTime" v-text="playingTime()">
-            </div>
-          </div>
-
-          <div class="nowPlayingState">
-
-          </div>
-        </div>
-    </div> {% endcomment %}
+  {% comment %} <div class="spotify-backdrop">
 
     <div class="spotify-login" v-if="is_active === false" @click="login2">
       <div class="spotify-wrap-login">
@@ -49,35 +17,69 @@
       </div>
     </div>
     <div class="spotify-player" v-else>
-      <div class="spotify-music-moving" v-if="is_paused === false" @click="togglePlay">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="spotify-pause" v-else @click="togglePlay">
-        <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none">
-          <circle cx="31.6999" cy="31.6998" r="26.7" fill="black"/>
-          <path d="M50.085 28.035C40.005 22.05 23.1525 21.42 13.545 24.4125C11.97 24.885 10.395 23.94 9.9225 22.5225C9.45 20.9475 10.395 19.3725 11.8125 18.9C22.995 15.5925 41.4225 16.2225 53.0775 23.1525C54.495 23.94 54.9675 25.83 54.18 27.2475C53.3925 28.35 51.5025 28.8225 50.085 28.035ZM49.77 36.855C48.9825 37.9575 47.565 38.43 46.4625 37.6425C37.9575 32.445 25.0425 30.87 15.12 34.02C13.86 34.335 12.4425 33.705 12.1275 32.445C11.8125 31.185 12.4425 29.7675 13.7025 29.4525C25.2 25.9875 39.375 27.72 49.14 33.705C50.085 34.1775 50.5575 35.7525 49.77 36.855ZM45.99 45.5175C45.36 46.4625 44.2575 46.7775 43.3125 46.1475C35.91 41.58 26.6175 40.635 15.5925 43.155C14.49 43.47 13.545 42.6825 13.23 41.7375C12.915 40.635 13.7025 39.69 14.6475 39.375C26.6175 36.6975 37.0125 37.8 45.2025 42.84C46.305 43.3125 46.4625 44.5725 45.99 45.5175ZM31.5 0C27.3634 0 23.2672 0.814772 19.4455 2.39779C15.6237 3.98082 12.1512 6.30109 9.22614 9.22614C3.31874 15.1335 0 23.1457 0 31.5C0 39.8543 3.31874 47.8665 9.22614 53.7739C12.1512 56.6989 15.6237 59.0192 19.4455 60.6022C23.2672 62.1852 27.3634 63 31.5 63C39.8543 63 47.8665 59.6813 53.7739 53.7739C59.6813 47.8665 63 39.8543 63 31.5C63 27.3634 62.1852 23.2672 60.6022 19.4455C59.0192 15.6237 56.6989 12.1512 53.7739 9.22614C50.8488 6.30109 47.3763 3.98082 43.5545 2.39779C39.7328 0.814772 35.6366 0 31.5 0Z" fill="#1ED760"/>
-        </svg>
-      </div>
 
-      <div class="spotify-content">
-        <div class="trackName-container">
-          <div class="marquee">
-            <span v-text="track?.album?.name"></span>
+      <div class="spotify-wrapper">
+
+        <div class="spotify-info">
+
+          <div class="spotify-trackName-container">
+            <div class="spotify-trackName">
+              <span v-text="track?.album?.name"></span>
+            </div>
+          </div>
+
+          <div class="spotify-artist-container">
+            <div class="spotify-artist">
+              <span v-text="track?.artists[0].name"></span>
+            </div>
           </div>
         </div>
 
-        <div class="artist-container">
-          <div class="artistInfo">
-            <span v-text="track?.artists[0].name"></span>
+        <div class="spotify-controls">
+          <div class="shuffle">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="db-svg" @click="shufflePlay">
+              <path d="M17.6732 3.63033C17.855 3.81398 17.855 4.11172 17.6732 4.29535L14.71 7.28793C14.5282 7.47157 14.2334 7.47157 14.0516 7.28793C13.8698 7.10429 13.8698 6.80655 14.0516 6.62291L16.2904 4.36187C15.635 4.30516 14.9119 4.27653 13.9463 4.56353C12.48 4.99935 10.4868 6.19095 7.74555 9.31855C5.89788 11.4266 4.26081 12.7572 2.96768 13.5404C2.32165 13.9317 1.75502 14.1903 1.28561 14.339C0.833608 14.4823 0.415891 14.5419 0.0959103 14.4669L0.306484 13.5508C0.381562 13.5684 0.60513 13.569 1.00676 13.4417C1.39098 13.3199 1.89034 13.0963 2.48876 12.7339C3.68454 12.0096 5.25027 10.7466 7.04827 8.69519C9.85197 5.49631 11.9857 4.16589 13.6834 3.66131C14.6356 3.37831 15.464 3.36382 16.1314 3.40328L14.0516 1.30275C13.8698 1.11911 13.8698 0.821368 14.0516 0.637729C14.2334 0.454089 14.5282 0.454091 14.7101 0.637732L17.6732 3.63033Z" fill="white" fill-opacity="0.3"/>
+              <path d="M17.4957 13.7174C17.6758 13.9004 17.6758 14.1972 17.4957 14.3802L14.5605 17.3627C14.3804 17.5458 14.0883 17.5458 13.9082 17.3627C13.7281 17.1797 13.7281 16.883 13.9082 16.6999L15.9337 14.6418C15.8891 14.6458 15.8438 14.6496 15.7979 14.653C15.2083 14.6969 14.5071 14.682 13.6656 14.4446C12.1939 14.0293 10.3517 12.9503 7.93336 10.4453L8.5956 9.7928C10.9453 12.2258 12.6514 13.1856 13.9124 13.5414C14.6275 13.7432 15.2183 13.7563 15.7306 13.7182C15.8766 13.7073 16.0152 13.6925 16.1507 13.6763L13.9082 11.3976C13.7281 11.2146 13.7281 10.9179 13.9082 10.7348C14.0884 10.5518 14.3804 10.5518 14.5605 10.7348L17.4957 13.7174Z" fill="white" fill-opacity="0.3"/>
+              <path d="M6.54742 7.57914L5.9134 8.26073C4.52684 6.83339 3.31893 5.8881 2.35649 5.29673C1.76496 4.93326 1.27294 4.70764 0.894675 4.58416C0.498848 4.45495 0.28093 4.45513 0.208593 4.47219L0 3.55914C0.319005 3.48389 0.732207 3.54662 1.17682 3.69176C1.63899 3.84263 2.19673 4.10318 2.83381 4.49465C3.86653 5.12921 5.12562 6.11873 6.54742 7.57914Z" fill="white" fill-opacity="0.3"/>
+            </svg>
+          </div>
+
+          <div class="controls">
+            <div class="previous">
+              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="21" viewBox="0 0 23 21" fill="none" class="db-svg" @click="previousPlay">
+                <path d="M6.16972 0C6.59562 0 6.94093 0.343068 6.94093 0.766197V8.89176L21.8374 0.174153C22.3533 -0.127699 23.0035 0.244051 23 0.838776L22.8871 20.2371C22.8838 20.8306 22.2315 21.1951 21.7191 20.8897L6.94093 12.0803V20.1765C6.94093 20.5996 6.59562 20.9427 6.16972 20.9427H0.771215C0.345316 20.9427 0 20.5996 0 20.1765V0.766197C0 0.343068 0.345316 0 0.771215 0H6.16972Z" fill="#D9D9D9"/>
+              </svg>
+            </div>
+
+            <div class="play-pause">
+              <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg" v-if="is_paused === true" @click="togglePlay">
+                <circle cx="31" cy="31" r="30" stroke="#B1FF29"/>
+                <path d="M41 31C41.0006 31.2612 40.9334 31.5181 40.8047 31.7457C40.6761 31.9733 40.4905 32.1639 40.2659 32.299L26.3491 40.7736C26.1145 40.9166 25.8457 40.9947 25.5706 40.9997C25.2956 41.0048 25.0241 40.9367 24.7843 40.8024C24.5468 40.6702 24.349 40.4775 24.2111 40.2439C24.0733 40.0104 24.0004 39.7445 24 39.4736V22.5264C24.0004 22.2555 24.0733 21.9896 24.2111 21.7561C24.349 21.5225 24.5468 21.3298 24.7843 21.1976C25.0241 21.0633 25.2956 20.9952 25.5706 21.0003C25.8457 21.0053 26.1145 21.0834 26.3491 21.2264L40.2659 29.701C40.4905 29.8361 40.6761 30.0267 40.8047 30.2543C40.9334 30.4819 41.0006 30.7388 41 31Z" fill="#B1FF29"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none" class="db-svg" v-else @click="togglePlay">
+                <circle cx="30" cy="30" r="29.5" stroke="#B1FF29"/>
+                <rect x="23" y="19" width="5" height="20" rx="1" fill="#B1FF29"/>
+                <rect x="32" y="19" width="5" height="20" rx="1" fill="#B1FF29"/>
+              </svg>
+            </div>
+
+            <div class="next">
+              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="21" viewBox="0 0 23 21" fill="none" class="db-svg" @click="nextPlay">
+                <path d="M16.8303 0C16.4044 0 16.0591 0.343068 16.0591 0.766197V8.89176L1.16261 0.174153C0.64671 -0.127699 -0.00350046 0.244051 1.41873e-05 0.838776L0.11286 20.2371C0.116249 20.8306 0.768467 21.1951 1.28085 20.8897L16.0591 12.0803V20.1765C16.0591 20.5996 16.4044 20.9427 16.8303 20.9427H22.2288C22.6547 20.9427 23 20.5996 23 20.1765V0.766197C23 0.343068 22.6547 0 22.2288 0H16.8303Z" fill="#D9D9D9"/>
+              </svg>
+            </div>
+          </div>
+
+          <div class="restart">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="15" viewBox="0 0 18 15" fill="none" class="db-svg" @click="playSingleTrack">
+              <path d="M1.1954 2.59091C1.1954 1.83643 1.79236 1.2248 2.52874 1.2248H15.4713C16.2076 1.2248 16.8046 1.83643 16.8046 2.59091V9.762C16.8046 10.5165 16.2076 11.1281 15.4713 11.1281H11.7648L13.4023 9.52646C13.6357 9.28731 13.6357 8.89956 13.4023 8.6604C13.1689 8.42125 12.7904 8.42125 12.557 8.6604L9.8992 11.3075C9.66578 11.5466 9.66578 11.9344 9.8992 12.1735L12.4651 14.8206C12.6985 15.0598 13.0769 15.0598 13.3103 14.8206C13.5438 14.5815 13.5438 14.1937 13.3103 13.9546L11.7648 12.3529H15.4713C16.8678 12.3529 18 11.1929 18 9.762V2.59091C18 1.15999 16.8678 0 15.4713 0H2.52874C1.13215 0 0 1.15999 0 2.59091V9.762C0 11.1929 1.13215 12.3529 2.52874 12.3529H7.28736C7.61746 12.3529 7.88506 12.0787 7.88506 11.7405C7.88506 11.4023 7.61746 11.1281 7.28736 11.1281H2.52874C1.79236 11.1281 1.1954 10.5165 1.1954 9.762V2.59091Z" fill="white" fill-opacity="0.3"/>
+            </svg>
           </div>
         </div>
       </div>
+
     </div>
-  </div>
+  </div> {% endcomment %}
 
   <section class="db-section db-section--banner">
     <div class="db-bg-wrap">
@@ -94,14 +96,20 @@
       <div class="db-row">
         <div class="db-col">
           <h1>
-            <span>Welcome to the</span>
-            <span>DEADBEAT&nbsp;</span>
-            <span>world</span>
+            <span>Kill your bad vibes.</span>
+            <span>Become a</span>
+            <span>Deadbeat</span>
           </h1>
           <p>
-            Welcome to the story of deadbeat underworld. A post-apocalyptic world devoid of the living.
+            In 2069 humanity has been replaced by 7 wildly fun music genre loving burroughs of the undead, competing in one big game of musical glory!
+            <br />
+            <br />
+            But not quite... yet. Fun takes some work, dammit. So browse a bit, sign up for updates, tell a friend, tell your dog, tell the world.
+            <br />
+            <br />
+            Get it? Got it? Goose yourself.
           </p>
-          <div class="db-qr-wrap">
+          {% comment %} <div class="db-qr-wrap">
             <svg class="db-qr-code db-svg"
               width="122"
               height="122"
@@ -181,7 +189,7 @@
             <span class="db-qr-label">
               Unleash your soul with Beat Music
             </span>
-          </div>
+          </div> {% endcomment %}
         </div>
         <div class="db-col">
           <div class="db-inner-row">
@@ -206,10 +214,38 @@
                       {% render 'widget--marketplace' %}
                     </div>
                   </div> {% endcomment %}
+
                   <div class="db-widget-col">
-                    <div class="db-widget-list">
-                      {% render 'widget--year-2069' %}
-                      {% render 'widget--roadmap' %}
+                    {% render 'widget--columbus' %}
+                  </div>
+
+                  <div class="db-widget-col">
+                    <div class="db-widget-inner-row">
+                      <div class="db-widget-inner-col">
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6guhtLC6PbcxXowxpWwP4a?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                      </div>
+
+                      <div class="db-widget-inner-col">
+                        <div class="db-widget-project-trailer">
+                          
+                          <div class="db-play">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 62 62" fill="none" class="db-svg">
+                              <circle cx="31.4326" cy="31" r="30" stroke="#B1FF29"/>
+                              <path d="M41.4326 31C41.4333 31.2612 41.366 31.5181 41.2373 31.7457C41.1087 31.9733 40.9231 32.1639 40.6985 32.299L26.7817 40.7736C26.5471 40.9166 26.2783 40.9947 26.0033 40.9997C25.7282 41.0048 25.4567 40.9367 25.2169 40.8024C24.9794 40.6702 24.7816 40.4775 24.6437 40.2439C24.5059 40.0104 24.433 39.7445 24.4326 39.4736V22.5264C24.433 22.2555 24.5059 21.9896 24.6437 21.7561C24.7816 21.5225 24.9794 21.3298 25.2169 21.1976C25.4567 21.0633 25.7282 20.9952 26.0033 21.0003C26.2783 21.0053 26.5471 21.0834 26.7817 21.2264L40.6985 29.701C40.9231 29.8361 41.1087 30.0267 41.2373 30.2543C41.366 30.4819 41.4333 30.7388 41.4326 31Z" fill="#B1FF29"/>
+                            </svg>
+                          </div>
+
+                          <div class="db-project-trailer">
+                            <span>
+                              PROJECT
+                            </span>
+                            <span>
+                              TRAILER
+                            </span>
+                          </div>
+
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -269,7 +305,6 @@
         token_endpoint:'https://accounts.spotify.com/api/token',
         client_id: 'd73738945439475087703b513466d0d7',
         client_secret: '0329c2f2504645fcaf84a1059ad5121e',
-        // access_token: 'BQCq1Bdq_V6hsjYtvK2mV-38vNlI_pNuAruO8ZduTaruVwe91exyKtNe6r1odJqG_sDWuz13taVB-TdHF1TmPRCV2thjoWt3fDw9r1tfaoCw8wvBnlFdRGU9dDGCKroPbjEV1G6HQk8s-FBtPwckRtdb36GS2wBlIL7cc6OSgWeEy3XApDtvEmrJvKdcEsxFN1cuKMVcRLP1QinTQOdnhBL_lbILqvtZ',
         access_token: localStorage.getItem('access_token'),
         refresh_token: localStorage.getItem('refresh_token'),
         token: {
@@ -309,7 +344,6 @@
       }
     },
     created() {
-
       const script = document.createElement('script');
       script.src = "https://sdk.scdn.co/spotify-player.js";
       script.async = true;
@@ -356,18 +390,13 @@
       }
 
       if (this.access_token) {
-        this.connectToSpotifyWebSDK();
+        // this.connectToSpotifyWebSDK();
       }
     },
     watch: {
       device(newValue, oldValue) {
         this.autoConnect(newValue, oldValue);
       },
-      access_token(newValue, oldValue) {
-        console.log(newValue);
-        console.log(`Compare Access Token ${newValue}:${oldValue}`);
-        this.connectToSpotifyWebSDK();
-      }
     },
     mounted() {
       this.widgetDragScroll();
@@ -380,7 +409,6 @@
     },
     methods: {
       connectToSpotifyWebSDK() {
-
         window.onSpotifyWebPlaybackSDKReady = () => {
             const player = new window.Spotify.Player({
               name: "Deadbeat Vuejs",
@@ -432,6 +460,65 @@
 
             player.connect();
         }
+      },
+      playSingleTrack() {
+        console.log(this.track.uri);
+        const convertToJson = JSON.stringify({
+          uris: [this.track.uri]
+        })
+
+        fetch(`https://api.spotify.com/v1/me/player/play?device_id=${this.device}`, {
+          method: 'PUT',
+          headers: {
+            Authorization: `Bearer ${this.access_token}`,
+          },
+          body: convertToJson,
+        }).then((response) => {
+          return response.json();
+        }).then(data => {
+          console.log(`Playback started: ${data}`);
+          this.player.togglePlay();
+        })
+      },
+      async shufflePlay() {
+        const response = await fetch(`https://api.spotify.com/v1/playlists/6guhtLC6PbcxXowxpWwP4a`, {
+          headers: {
+            Authorization: `Bearer ${this.access_token}`,
+          }
+        })
+
+        const data = await response.json();
+
+        const getTrackURIS = data.tracks.items.map((track) => {
+          return track.track.uri;
+        })
+
+        const shuffleTrackURIS = this.shuffleArray(getTrackURIS);
+
+        const convertToJson = JSON.stringify({
+          uris: shuffleTrackURIS
+        })
+
+        fetch(`https://api.spotify.com/v1/me/player/play?device_id=${this.device}`, {
+          method: 'PUT',
+          headers: {
+            Authorization: `Bearer ${this.access_token}`,
+          },
+          body: convertToJson,
+        }).then((response) => {
+          console.log(response.headers);
+          return response.json();
+        }).then(data => {
+          console.log(`Playback started: ${data}`);
+          this.player.togglePlay();
+        })
+      },
+      shuffleArray(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+          const j = Math.floor(Math.random() * (i + 1));
+          [array[i], array[j]] = [array[j], array[i]];
+        }
+        return array;
       },
       async autoConnect(newValue, oldValue) {
         console.log(`Compare ${newValue}:${oldValue}`);
