--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -20,10 +20,10 @@
                 loading="lazy">
             </a>
             <h4>
-              Subscribe to our newsletter
+              BREAKING NEWS
             </h4>
             <p>
-              Get updated to our exciting promotions, limited offers, articles and resources.
+              Put your digital John Hancock there mister, or maam, or mister maam and get updates direct to your eyeballs from 2069.
             </p>
             <ul class="db-contact-list">
               <li class="db-contact-item">
@@ -73,7 +73,7 @@
                   loading="lazy">
               </a>
               <p>
-                We are a Web3 brand focused on creating the story world and building the story canon with us… ON AIR!.
+                Elevate is a transmedia entertainment company chasing simple ideas that can change the world.
               </p>
             </div>
             <p class="db-copyright">
