--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -1774,6 +1774,138 @@
     }
   }
 
+  .db-section--explore-oc-the-game {
+    position: relative;
+    padding-bottom: 0;
+    background-color: #0E051A;
+    padding-top: 256px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 1573px;
+      background-image: url('About-Us__asset-bg-v01.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      object-fit: cover;
+      z-index: 1;
+    }
+
+    .explore-oc {
+      position: relative;
+      z-index: 2;
+      .db-container {
+        .db-row {
+          &:nth-child(1) {
+            flex-direction: column;
+            row-gap: 40px;
+            h1 {
+              text-transform: uppercase;
+              text-align: center;
+              font-family: $primaryFontFamily;
+              font-size: 88px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%; /* 88px */
+              letter-spacing: -3.52px;
+              display: flex;
+              column-gap: 10px;
+              justify-content: center;
+
+              span {
+                &:nth-child(1) {
+
+                  display: inline-block;
+                  color: #A120D2;
+                }
+
+                &:nth-child(2) {
+                  display: inline-block;
+                  color: #B1FF29;
+                }
+              }
+            }
+
+            .db-col {
+              &:nth-child(2) {
+                color: #FFF;
+                text-align: center;
+                font-family: $primaryFontFamily;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+              }
+            }
+          }
+
+          &:nth-child(2) {
+            max-width: 1440px;
+            padding-left: 62px;
+            padding-right: 62px;
+            padding-bottom: 73px;
+            width: 100%;
+            height: 810px;
+            margin-top: 96px;
+            border-radius: 30px;
+            border: 10px solid #242031;
+            box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.40);
+            background: url('Explore-OC__asset-v01-2880x1620.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+
+            .db-col {
+              &:nth-child(1) {
+                display: flex;
+                column-gap: 177px;
+                .db-behind-the-scenes {
+                  max-width: 442px;
+                  width: 100%;
+                  min-width: 442px;
+                  .db-behind-the-scenes-title {
+                    color: #FFF;
+                    font-family: $primaryFontFamily;
+                    font-size: 50px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 100%; /* 50px */
+                    text-transform: uppercase;
+                  }
+
+                  .db-behind-the-scenes-description {
+                    color: #FFF;
+                    font-family: $secondaryFontFamily;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                    margin-top: 46px;
+                  }
+                }
+
+                .db-play-button {
+                  max-width: 38px;
+                  min-width: 38px;
+                  width: 100%;
+                }
+              }
+
+              &:nth-child(2) {
+
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   .db-section--explore-oc-resurrection {
     background-image: url('About-Us__asset-resurrection-bg-v01.png');
     background-position: 0px 0px;
