--- a/styles/db-theme/_widget.scss
+++ b/styles/db-theme/_widget.scss
@@ -8,6 +8,58 @@
       scale 200ms ease-in-out 0ms !important;
   }
 
+  &.--columbus {
+    .db-widget-box {
+      background-image: url('DB_Widget01_bg-v02-1312x886.jpg');
+      background-position: bottom;
+      background-repeat: no-repeat;
+      background-size: cover;
+      max-width: 656px;
+      width: 100%;
+      height: 443px;
+      padding-top: 67px;
+      padding-right: 57px;
+      scale: 1.0;
+      border-radius: 30px;
+      display: flex;
+      justify-content: flex-end;
+      position: relative;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        box-shadow: unset;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
+
+
+      .db-columbus {
+        max-width: 314px;
+        width: 100%;
+      }
+
+      &:hover {
+        scale: 1.05;
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px #B522EB4D,
+            -4.07796px -4.07796px 8.15591px #B522EB4D,
+            2.03898px 2.03898px 4.07796px #D86EFF99,
+            -2.03898px -2.03898px 4.07796px #D86EFF99;
+          border-color: #D47FF3;
+        }
+      }
+    }
+  }
+
   &.--year-2069 {
     .db-widget-box {
       // position: relative;
